force-app/main/default/objects/APTemplateTask__c/APTemplateTask__c.object-meta.xml
<CustomObject>
    <description>Action Plan Template Task - belongs to Action Plan Template</description>
    <label>Action Plan Template Task</label>
    <nameField>
        <label>Action Plan Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>