force-app/main/default/objects/APTemplateTask__c/fields/Minutes_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Reminder__c</fullName>
    <description>Minutes after midnight to show Task reminder. Not shown to user - use the Time_Reminder formula instead.</description>
    <inlineHelpText>Minutes after midnight to show Task reminder</inlineHelpText>
    <label>Minutes Reminder</label>
    <length>4</length>
    <type>Text</type>
</CustomField>