force-app/main/default/objects/APTemplateTask__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should a reminder pop-up be set?</description>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>