force-app/main/default/objects/APTemplateTask__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Task Type</description>
    <label>Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>